# object-sense

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  concept_v1.md  concept_v2.md  demo.sh  design_notes.md  design_v2_corrections.md  docker-compose.yml  inital_idea.md  pyproject.toml
.beads/: interactions.jsonl
scripts/: test_tool_calls.py
src/object_sense/: __init__.py  app.py  cli.py  config.py  db.py
src/object_sense/clients/: __init__.py  embeddings.py
src/object_sense/extraction/: __init__.py  base.py  image.py  json_extract.py  orchestrator.py  text.py
src/object_sense/inference/: __init__.py  schemas.py  type_inference.py
src/object_sense/models/: __init__.py  base.py  blob.py  entity.py  entity_deterministic_id.py  entity_evolution.py  enums.py  event_participant.py  evidence.py  identity_conflict.py  object.py  observation.py  signature.py  type.py  type_candidate.py  type_evolution.py
src/object_sense/resolution/: __init__.py  candidate_pool.py  reconciliation.py  resolver.py  similarity.py  slot_resolver.py
src/object_sense/services/: __init__.py  type_candidate.py  type_evolution.py  type_promotion.py
src/object_sense/utils/: __init__.py  medium.py  slots.py
tests/: conftest.py  test_app.py  test_e2e_ingest.py  test_embeddings.py  test_entity_resolution.py  test_extraction.py  test_invariants.py  test_medium.py  test_namespace_enforcement.py  test_prototype_seeding.py  test_resolution_spine.py  test_resolution_thresholds.py  test_slot_resolver.py  test_slots.py  test_slots_e2e.py  test_type_evolution.py  test_type_inference.py
